--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="index.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <script src="src/main/resources/static/index.js"></script>
+    <link rel="stylesheet" href="src/main/resources/static/index.css">
 </head>
 <body>
 
-<img class="logo" src="bilder/Screenshot%202022-04-28%20at%2021.13.54.png">
+<img class="logo" src="src/main/resources/static/bilder/Screenshot%202022-04-28%20at%2021.13.54.png">
 
 <div class="wrapper">
     <div class="iphone">
@@ -19,7 +19,7 @@
         <div class="camera"></div>
         <div class="speaker"></div>
         <div class="screen">
-            <img class="hjem" onclick="scrollned()" src="bilder/Screenshot%202022-05-27%20at%2020.35.48.png">
+            <img class="hjem" onclick="scrollned()" src="src/main/resources/static/bilder/Screenshot%202022-05-27%20at%2020.35.48.png">
             <!-- Put screen stuff in here -->
             <div class="appleicon">
 
@@ -41,7 +41,7 @@
         <div class="camera"></div>
         <div class="speaker"></div>
         <div class="screen">
-            <img class="hjem" onclick="scrollned2()" src="bilder/Screenshot%202022-05-27%20at%2020.01.24.png">
+            <img class="hjem" onclick="scrollned2()" src="src/main/resources/static/bilder/Screenshot%202022-05-27%20at%2020.01.24.png">
 
             <!-- Put screen stuff in here -->
             <div class="appleicon">
@@ -66,7 +66,7 @@
         <div class="camera"></div>
         <div class="speaker"></div>
         <div class="screen">
-            <img class="hjem" onclick="scrollned3()" src="bilder/Screenshot%202022-05-27%20at%2022.01.40.png">
+            <img class="hjem" onclick="scrollned3()" src="src/main/resources/static/bilder/Screenshot%202022-05-27%20at%2022.01.40.png">
             <!-- Put screen stuff in here -->
             <div class="appleicon">
 
@@ -88,7 +88,7 @@
         <div class="camera"></div>
         <div class="speaker"></div>
         <div class="screen">
-            <img class="hjem" onclick="scrollned4()" src="bilder/Screenshot%202022-05-30%20at%2016.40.39.png">
+            <img class="hjem" onclick="scrollned4()" src="src/main/resources/static/bilder/Screenshot%202022-05-30%20at%2016.40.39.png">
             <!-- Put screen stuff in here -->
             <div class="appleicon">
 
@@ -112,7 +112,7 @@
     <div class="camera"></div>
     <div class="speaker"></div>
     <div class="screen">
-        <img class="hjem" onclick="scrollned5()" ondblclick="scrollopp5()" src="bilder/Screenshot%202022-05-30%20at%2016.48.31.png">
+        <img class="hjem" onclick="scrollned5()" ondblclick="scrollopp5()" src="src/main/resources/static/bilder/Screenshot%202022-05-30%20at%2016.48.31.png">
         <!-- Put screen stuff in here -->
         <div class="appleicon">
 
@@ -135,7 +135,7 @@
     <div class="camera"></div>
     <div class="speaker"></div>
     <div class="screen">
-        <img class="hjem" onclick="scrollned6()" ondblclick="scrollopp6()" src="bilder/Screenshot%202022-05-30%20at%2021.08.31.png">
+        <img class="hjem" onclick="scrollned6()" ondblclick="scrollopp6()" src="src/main/resources/static/bilder/Screenshot%202022-05-30%20at%2021.08.31.png">
         <!-- Put screen stuff in here -->
         <div class="appleicon">
 
